objects/Listing_Review__c.object
<CustomObject>
    <description>Reviews provided by community users on listings.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Listing Reviews</relationshipLabel>
        <relationshipName>Listing_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>Star rating</description>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Community User leaving the review.</description>
        <inlineHelpText>Community User leaving the review.</inlineHelpText>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Listing Reviews</relationshipLabel>
        <relationshipName>Listing_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Listing Review</label>
    <nameField>
        <label>Listing Review Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listing Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>